fix por mala lectura de premisa

--- a/notebooks/subject_grades_generator.ipynb
+++ b/notebooks/subject_grades_generator.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HEADER = ['test_1', 'test_2', 'final_grade']\n",
-    "N_STUDENT = 1000"
+    "HEADER = ['test_1', 'test_2', 'test_3', 'final_grade']\n",
+    "N_STUDENT = 100000"
    ]
   },
   {
@@ -52,16 +52,23 @@
     "    while i < N_STUDENT:\n",
     "        test_1 = random.randint(0, 20)\n",
     "        test_2 = random.randint(0, 20)\n",
+    "        test_3 = random.randint(0, 20)\n",
     "        \n",
     "        entry = [test_1, \n",
     "                 test_2,\n",
-    "                 (test_1 + test_2)/2]\n",
+    "                 test_3,\n",
+    "                 check_test_criteria([test_1,\n",
+    "                                      test_2,\n",
+    "                                      test_3])]\n",
     "        \n",
     "        data.append(entry)\n",
     "        \n",
     "        i += 1\n",
     "    \n",
-    "    return data"
+    "    return data\n",
+    "\n",
+    "def check_test_criteria(tests):\n",
+    "    return int(sum([1 for test in tests if test > 11]) > 1)"
    ]
   },
   {
